Fix session submission persistence and stabilize tests